--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,12 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+STATION_TEL=
+STATION_GMB_URL=
+STATION_STR=
+STATION_PLZ=
+STATION_ORT=
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
