--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=52467196393cfa7a4d52",
+    "/css/app.css": "/css/app.css?id=cceb0abc74bcee26a94c"
 }
