--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     },
     "dependencies": {
         "autoprefixer": "10.4.5",
+        "cors": "^2.8.5",
+        "express": "^4.18.1",
+        "http": "0.0.1-security",
+        "socket.io": "^4.5.2",
         "webpack-livereload-plugin": "^3.0.2"
     }
 }
