--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /public/testen
 /public/rechnungen
 /public/signature
+/public/selbstauskunft
 /public/rechnung.pdf
 /public/rechnung10.pdf
 /public/positivetesten
