--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "cors": "^2.8.5",
         "express": "^4.18.1",
         "http": "0.0.1-security",
+        "nodemon": "^2.0.20",
         "socket.io": "^4.5.2",
         "webpack-livereload-plugin": "^3.0.2"
     }
